issue related to images

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List App</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/x-icon" href="/images/to-do-favicon.png">
+    <link rel="icon" type="image/x-icon" href="./images/to-do-favicon.png">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
     </div>
 
     <!-- Hidden audio element for the alarm -->
-    <audio id="alarmSound" src="/audios/audio.mp3" preload="auto"></audio>
+    <audio id="alarmSound" src="./audios/audio.mp3" preload="auto"></audio>
 
     <script src="app.js"></script>
 </body>
